--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="modal-content">
             <p id="typewriter-text"></p>
             <div id="surprise-link-container">
-                <a href="https://shivam179mathur.github.io/web2/" target="_blank" class="surprise-link">
+                <a href="https://shivam179mathur.github.io/gallery/" target="_blank" class="surprise-link">
                     its an suprise for you hope you'll like it 🎁
                 </a>
             </div>
